--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -10,7 +10,7 @@ block content
                     img.b-client__image(src='assets/img/tmp/client_1_on.png')
                     a.b-client__link(href='#') apteka-klassika.ru
 
-                .b-client__text
+                .b-client__text.b-text
                     p На фармацевтическом рынке сеть аптек «Классика» существует с 1995 года. Это крупнейшая аптечная сеть на Урале, включающая более 180 аптек в 26 городах Челябинской и Свердловской областей. Аптеки находятся в Челябинске, Екатеринбурге, Тюмени и Магнитогорске. За эти 20 лет «Классика» прошла большой путь и приобрела имя, ставшее синонимом надежности и качества для людей по всему Уралу.
 
         .b-portfolio.g-mb60
