--- a/src/templates/contacts.jade
+++ b/src/templates/contacts.jade
@@ -6,19 +6,18 @@ block content
             h1.b-page__title Контактная информация
 
             .b-contacts
-                .row
-                    .col-xs-4
+                .b-contacts-grid
+                    .b-contacts-grid__item.b-contacts-grid__item_phone
                         .b-contacts__item.b-contacts__item_phone +7 (812) 603-70-97
-                    .col-xs-4
+                    .b-contacts-grid__item.b-contacts-grid__item_skype
                         .b-contacts__item.b-contacts__item_skype: a.b-contacts__link(href='skype:tolkunovdb?chat') tolkunovdb
-                    .col-xs-4
+                    .b-contacts-grid__item.b-contacts-grid__item_vk
                         .b-contacts__item.b-contacts__item_vk: a.b-contacts__link(href='https://vk.com/im?media=&sel=-68302756', target='_blank') Messenger VK
-                .row
-                    .col-xs-4
+                    .b-contacts-grid__item.b-contacts-grid__item_mail
                         .b-contacts__item.b-contacts__item_mail: a.b-contacts__link(href='mailto:order@tolkunov.com') order@tolkunov.com
-                    .col-xs-4
+                    .b-contacts-grid__item.b-contacts-grid__item_telegram
                         .b-contacts__item.b-contacts__item_telegram: a.b-contacts__link(href='http://telegram.me/tolkunovdb', target='_blank') tolkunovdb
-                    .col-xs-4
+                    .b-contacts-grid__item.b-contacts-grid__item_fb
                         .b-contacts__item.b-contacts__item_fb: a.b-contacts__link(href='https://www.facebook.com/messages/t/tolkunov', target='_blank') Messenger Facebook
             .b-map
                 center
