--- a/src/templates/offers_empty.jade
+++ b/src/templates/offers_empty.jade
@@ -8,28 +8,29 @@ block content
             p.b-page__lead Бонусы от партнеров для наших клиентов
 
             .b-offers
-                .b-offers__filter.b-offers-filter
-                    .b-offers-filter__block.b-offers-filter__block_color_yellow
-                        a.b-offers-filter__item(href='#') Все
-                    .b-offers-filter__block.b-offers-filter__block_color_red
-                        a.b-offers-filter__item(href='#') Эконом
-                        a.b-offers-filter__item(href='#') Стандарт
-                        a.b-offers-filter__item.b-offers-filter__item_active(href='#') Премиум
-                        a.b-offers-filter__item(href='#') Вип
+                .container
+                    .b-offers__filter.b-offers-filter
+                        .b-offers-filter__block.b-offers-filter__block_color_yellow
+                            a.b-offers-filter__item(href='#') Все
+                        .b-offers-filter__block.b-offers-filter__block_color_red
+                            a.b-offers-filter__item(href='#') Эконом
+                            a.b-offers-filter__item(href='#') Стандарт
+                            a.b-offers-filter__item.b-offers-filter__item_active(href='#') Премиум
+                            a.b-offers-filter__item(href='#') Вип
 
-                        .b-offers-filter__title html5 и flash-баннеры
-                    .b-offers-filter__block.b-offers-filter__block_color_blue
-                        a.b-offers-filter__item(href='#') Мини
-                        a.b-offers-filter__item(href='#') Бизнес
-                        a.b-offers-filter__item(href='#') Анимация+
+                            .b-offers-filter__title html5 и flash-баннеры
+                        .b-offers-filter__block.b-offers-filter__block_color_blue
+                            a.b-offers-filter__item(href='#') Мини
+                            a.b-offers-filter__item(href='#') Бизнес
+                            a.b-offers-filter__item(href='#') Анимация+
 
-                        .b-offers-filter__title gif-баннеры
-                    .b-offers-filter__block.b-offers-filter__block_color_green
-                        a.b-offers-filter__item(href='#') Смолл
-                        a.b-offers-filter__item(href='#') Мидл
-                        a.b-offers-filter__item(href='#') Биг
+                            .b-offers-filter__title gif-баннеры
+                        .b-offers-filter__block.b-offers-filter__block_color_green
+                            a.b-offers-filter__item(href='#') Смолл
+                            a.b-offers-filter__item(href='#') Мидл
+                            a.b-offers-filter__item(href='#') Биг
 
-                        .b-offers-filter__title jpg-баннеры
+                            .b-offers-filter__title jpg-баннеры
                 .b-offers-empty.b-offers__empty
                     p.b-offers-empty__title Акций для этого тарифа пока что нет
                     .b-offers-empty__text
