--- a/src/blocks/b-blog/b-blog.less
+++ b/src/blocks/b-blog/b-blog.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-blog {
 	.g-loader__button {
@@ -22,17 +23,7 @@
 }
 
 .b-blog__list {
-	width: 1020px;
 	margin: 60px auto 0;
-	padding-left: 10px;
-
-	@media (min-width: 1360px) {
-		width: 1360px;
-	}
-
-	@media (min-width: 1700px) {
-		width: 1700px;
-	}
 }
 
 .b-blog__item {
@@ -54,10 +45,14 @@
 }
 
 .b-blog__title {
+	.my-heading-h3();
+
 	font-weight: bold;
-	font-size: 24px;
-	line-height: 1;
 	margin-bottom: 17px;
+
+	@media (min-width: @grid-float-breakpoint) {
+		line-height: 1;
+	}
 }
 
 .b-blog__content {
