--- a/src/blocks/b-checkbox/b-checkbox.less
+++ b/src/blocks/b-checkbox/b-checkbox.less
@@ -15,7 +15,12 @@
 		}
 
 		& + label {
-			font-size: 16px;
+			font-size: 12px;
+
+			@media (min-width: @screen-md-min) {
+				font-size: 16px;
+			}
+
 			letter-spacing: .1em;
 			text-transform: uppercase;
 			line-height: 20px;
@@ -55,12 +60,6 @@
 
 			a {
 				.mylink-extended(#3b8dc5);
-				//color: #3b8dc5;
-				//text-decoration: underline;
-
-				&:hover, &:active, &:focus {
-					//text-decoration: none;
-				}
 			}
 		}
 	}
