--- a/src/blocks/b-contact-links/b-contact-links.less
+++ b/src/blocks/b-contact-links/b-contact-links.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-contact-links {
 	text-align: center;
@@ -8,18 +9,28 @@
 }
 
 .b-contact-links__header {
-	font-size: 40px;
+	.my-heading-h1();
 	font-weight: bold;
 	margin-top: 0;
 	margin-bottom: 10px;
 }
 
 .b-contact-links__lead {
-	font-size: 30px;
+	.my-heading-lead();
 }
 
 .b-contact-links__list {
-	margin-top: 44px;
+	margin: 44px auto 0;
+
+	width: (89px + 10px) * 2;
+
+	@media (min-width: @screen-sm-min) {
+		width: (89px + 10px) * 3;
+	}
+
+	@media (min-width: @screen-md-min) {
+		width: auto;
+	}
 }
 
 .b-contact-links__item {
@@ -31,7 +42,7 @@
 	width: 89px;
 	height: 89px;
 	display: inline-block;
-	margin: 0 5px;
+	margin: 5px;
 	opacity: .9;
 
 	&:hover, &:active, &:focus {
