--- a/src/blocks/b-discounts/b-discounts.less
+++ b/src/blocks/b-discounts/b-discounts.less
@@ -1,9 +1,11 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-discounts {
 	padding-top: 70px;
 	padding-bottom: 35px;
+	overflow: hidden;
 }
 
 .b-discounts__header {
@@ -11,16 +13,18 @@
 	margin-bottom: 50px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 40px;
+
+	.my-heading-h1();
 }
 
 .b-discounts__list {
 	.make-row(50px);
-	.clearfix;
+	.clearfix();
 }
 
 .b-discounts__item {
-	.make-xs-column(6, 50px);
+	.make-xs-column(12, 50px);
+	.make-md-column(6, 50px);
 }
 
 .b-discounts__title {
