--- a/src/blocks/b-footer-menu/b-footer-menu.less
+++ b/src/blocks/b-footer-menu/b-footer-menu.less
@@ -4,12 +4,24 @@
 .b-footer-menu {
 	color: #fff;
 	margin-top: -3px;
+
+	text-align: center;
+
+	@media (min-width: @screen-md-min) {
+		text-align: left;
+	}
 }
 
 .b-footer-menu__header {
 	font-size: 24px;
 	font-weight: bold;
 	margin-bottom: 28px;
+
+	text-align: center;
+
+	@media (min-width: @screen-md-min) {
+		text-align: left;
+	}
 }
 
 .b-footer-menu__item {
