--- a/src/blocks/b-footer/b-footer.less
+++ b/src/blocks/b-footer/b-footer.less
@@ -4,8 +4,12 @@
 .b-footer {
 	background: #2b2b2b;
 	color: #fff;
-	padding-top: 72px;
+	padding-top: 50px;
 	padding-bottom: 50px;
+
+	@media (min-width: @screen-lg-min) {
+		padding-top: 72px;
+	}
 }
 
 .b-footer__logo {
@@ -13,8 +17,10 @@
 	background: 0 0 no-repeat url("../../assets/img/logo-white.svg");
 	width: 141px;
 	height: 31px;
-	//width: image-width("../../assets/img/footer-logo.png");
-	//height: image-height("../../assets/img/footer-logo.png")/2;
+
+	@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+		margin-top: 38px;
+	}
 
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/logo-blue.svg");
@@ -23,4 +29,57 @@
 
 .b-footer__copyright {
 	margin-top: 30px;
+}
+
+.b-footer__row {
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.b-footer__column {
+	margin-bottom: 35px;
+
+	@media (min-width: @screen-lg-min) {
+		margin-bottom: 0;
+	}
+}
+
+.b-footer__column_1 {
+	text-align: center;
+
+	.make-xs-column(12);
+	.make-lg-column(4);
+	.make-xl-column(3);
+
+	order: 3;
+	margin-bottom: 0;
+
+	@media (min-width: @screen-lg-min) {
+		order: inherit;
+	}
+}
+
+.b-footer__column_2 {
+	.make-xs-column(12);
+	.make-md-column(6);
+	.make-lg-column(4);
+	.make-xl-column-offset(1);
+
+	order: 1;
+
+	@media (min-width: @screen-lg-min) {
+		order: inherit;
+	}
+}
+
+.b-footer__column_3 {
+	.make-xs-column(12);
+	.make-md-column(6);
+	.make-lg-column(4);
+
+	order: 2;
+
+	@media (min-width: @screen-lg-min) {
+		order: inherit;
+	}
 }
