--- a/src/blocks/b-form-files/b-form-files.less
+++ b/src/blocks/b-form-files/b-form-files.less
@@ -1,8 +1,10 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-form-files {
-	font-size: 24px;
+	.my-heading-h3();
+
 	display: flex;
 	flex-flow: row wrap;
 	text-align: left;
@@ -10,7 +12,12 @@
 }
 
 .b-form-files__item {
-	width: 50%;
+	width: 100%;
+
+	@media (min-width: @screen-sm-min) {
+		width: 50%;
+	}
+
 	margin: 10px 0;
 
 	display: flex;
@@ -19,7 +26,7 @@
 }
 
 .b-form-files__name {
-	flex: 1;
+	flex: 1 0 auto;
 
 	padding-left: 34px;
 	margin-left: 10px;
