--- a/src/blocks/b-form-upload/b-form-upload.less
+++ b/src/blocks/b-form-upload/b-form-upload.less
@@ -1,9 +1,11 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-form-upload {
 	position: relative;
 	border: 2px dashed rgba(37, 37, 37, .2);
+	padding: 0 20px;
 
 	input {
 		position: absolute;
@@ -23,11 +25,11 @@
 }
 
 .b-form-upload__label {
-	font-size: 24px;
+	.my-heading-h3();
+
 	margin: 44px 0;
 	display: inline-block;
 
 	padding-left: 32px;
 	background: center left no-repeat url("../../assets/img/upload-icon.png");
 }
-
