--- a/src/blocks/b-modal-form/b-modal-form.less
+++ b/src/blocks/b-modal-form/b-modal-form.less
@@ -1,18 +1,29 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-modal-form {
 	width: 675px;
+	max-width: 100vw;
 }
 
 .b-modal-form__header {
 	margin-top: 35px;
-	margin-bottom: 43px;
+	margin-bottom: 35px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 40px;
+
+	.my-heading-h1();
+
+	@media (min-width: @grid-float-breakpoint) {
+		margin-bottom: 43px;
+	}
 }
 
 .b-modal-form__form {
-	padding: 40px 60px 47px;
+	padding: 40px 15px 47px;
+
+	@media (min-width: @grid-float-breakpoint) {
+		padding: 40px 60px 47px;
+	}
 }
