--- a/src/blocks/b-offer-properties/b-offer-properties.less
+++ b/src/blocks/b-offer-properties/b-offer-properties.less
@@ -2,21 +2,28 @@
 @import "mixins";
 
 .b-offer-properties {
-	background: #ffffff;
-	box-shadow: 1px 2px 40px rgba(0, 0, 0, .1);
-	border-radius: 10px;
 	text-align: center;
 
-	position: absolute;
-	left: 50%;
-	bottom: -40px;
-	transform: translateX(-50%);
-	padding: 16px 12px 11px;
+	@media (min-width: @grid-float-breakpoint) {
+		background: #ffffff;
+		box-shadow: 1px 2px 40px rgba(0, 0, 0, .1);
+		border-radius: 10px;
+
+		position: absolute;
+		left: 50%;
+		bottom: -40px;
+		transform: translateX(-50%);
+		padding: 16px 12px 11px;
+	}
 }
 
 .b-offer-properties__item {
-	display: inline-block;
-	margin: 0 12px;
+	margin: 0 12px 20px;
+
+	@media (min-width: @screen-sm-min) {
+		display: inline-block;
+		margin-bottom: 0;
+	}
 }
 
 .b-offer-properties__title {
