--- a/src/blocks/b-offers-empty/b-offers-empty.less
+++ b/src/blocks/b-offers-empty/b-offers-empty.less
@@ -3,24 +3,37 @@
 @import "mymixins";
 
 .b-offers-empty {
-	background: #f4f9fc right 60px top 45px no-repeat url("../../assets/img/offers-empty.png");
+	background: #f4f9fc;
 	border-radius: 8px;
-	margin: 60px 55px 150px;
-	padding-right: 356px;
-	padding-top: 40px;
-	padding-left: 40px;
-	padding-bottom: 27px;
+	margin: 60px 0;
+
+	padding: 40px 40px 10px;
+
+	@media (min-width: @screen-md-min) {
+		margin: 60px 0 100px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		background: #f4f9fc right 60px top 45px no-repeat url("../../assets/img/offers-empty.png");
+		margin: 60px 55px 150px;
+
+		padding-right: 356px;
+		padding-top: 40px;
+		padding-left: 40px;
+		padding-bottom: 27px;
+	}
 }
 
 .b-offers-empty__title {
-	font-size: 40px;
 	font-weight: bold;
 	margin-bottom: 20px;
+
+	.my-heading-h1();
 }
 
 .b-offers-empty__text {
-	font-size: 30px;
-	line-height: 32px;
+	line-height: 32/30;
+	.my-heading-lead();
 
 	p {
 		margin-bottom: 30px;
