--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -1,26 +1,19 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-offers {
 
 }
 
 .b-offers__filter {
-
+	@media (max-width: @screen-md-max) {
+		.responsive-invisibility();
+	}
 }
 
 .b-offers__list {
-	width: 1020px;
 	margin: 0 auto;
-	padding-left: 10px;
-
-	@media (min-width: 1360px) {
-		width: 1360px;
-	}
-
-	@media (min-width: 1700px) {
-		width: 1700px;
-	}
 }
 
 .b-offers__item {
@@ -42,10 +35,14 @@
 }
 
 .b-offers__title {
+	.my-heading-h3();
+
 	font-weight: bold;
-	font-size: 24px;
-	line-height: 1;
 	margin-bottom: 17px;
+
+	@media (min-width: @grid-float-breakpoint) {
+		line-height: 1;
+	}
 }
 
 .b-offers__content {
