--- a/src/blocks/b-prices/b-prices.less
+++ b/src/blocks/b-prices/b-prices.less
@@ -11,53 +11,98 @@
 
 .b-prices__header {
 	font-weight: bold;
-	font-size: 40px;
 	margin-bottom: 15px;
+
+	.my-heading-h1();
 }
 
 .b-prices__lead {
-	font-size: 30px;
 	line-height: 28px;
 	margin-bottom: 40px;
+
+	.my-heading-lead();
 }
 
 .b-prices__list {
-	margin: 0 -10px 100px;
-	.clearfix();
+	margin: -10px -10px 90px;
+
+	@media (min-width: @screen-sm-min) {
+		margin-top: -20px;
+		margin-bottom: 80px;
+	}
+
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
 
 	&:last-child {
-		margin-bottom: 80px;
+		margin-bottom: 60px;
 	}
 }
 
 .b-prices__list_count_4 {
 	.b-prices__item {
-		margin: 0 10px;
-		width: 220px;
+		margin: 10px 10px;
+
+		width: 100%;
+
+		@media (min-width: @screen-sm-min) {
+			width: ~"calc(50% - 20px)";
+			margin: 20px 10px;
+		}
+
+		@media (min-width: @screen-lg-min) {
+			width: 32%;
+		}
+
+		@media (min-width: @screen-xl-min) {
+			width: 220px;
+		}
 	}
+
 	.b-prices__item_wide {
-		width: 280px;
+		@media (min-width: @screen-xl-min) {
+			width: 280px;
+		}
 	}
 }
 
 .b-prices__list_count_3 {
-	padding: 0 54px;
-
 	.b-prices__item {
-		margin: 0 15px;
-		width: 274px;
+		margin: 10px 10px;
+
+		width: 100%;
+
+		@media (min-width: @screen-sm-min) {
+			width: ~"calc(50% - 20px)";
+			margin: 20px 10px;
+		}
+
+		@media (min-width: @screen-lg-min) {
+			margin: 20px 15px;
+			width: 274px;
+		}
 	}
 }
 
 .b-prices__item {
 	background: #ffffff;
 	box-shadow: 2px 2px 0 rgba(0, 0, 0, .05);
-	float: left;
 	padding: 35px 18px 42px;
+
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
 }
 
 .b-prices__item_recommended {
 	position: relative;
+
+	margin-top: 10px + 36px/2 !important;
+
+	@media (min-width: @screen-sm-min) {
+		margin-top: 20px !important;
+	}
 
 	&:before {
 		content: 'Рекомендуем';
@@ -86,6 +131,9 @@
 	font-size: 18px;
 	line-height: 1;
 	margin-bottom: 25px;
+
+	max-width: 100%;
+	flex: 1 0 auto;
 
 	p {
 		margin-bottom: 13px;
@@ -165,6 +213,9 @@
 .b-prices__link {
 	.mylink-extended(@text-color, 2px dotted rgba(37, 37, 37, .05), @link-hover-color);
 	margin-bottom: 13px;
+
+	/* TODO: tmp */
+	display: none;
 }
 
 .b-prices__button {
