--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -7,32 +7,31 @@
 
 .b-reviews__filter {
 	margin: 33px 30px 47px;
+
+	@media (max-width: @screen-xs-max) {
+		.responsive-invisibility();
+	}
 }
 
 .b-reviews__container {
 	background: #f5f9fc;
 	padding: 73px 0 0;
+
+	margin-top: 20px;
+
+	@media (min-width: @screen-sm-min) {
+		margin-top: 0;
+	}
 }
 
 .b-reviews__list {
-	width: 1020px;
 	margin: 0 auto;
-	padding-left: 10px;
-
-	@media (min-width: 1360px) {
-		width: 1360px;
-	}
-
-	@media (min-width: 1700px) {
-		width: 1700px;
-	}
 }
 
 .b-reviews__item {
 	width: 320px;
 	margin-bottom: 20px;
 	float: left;
-	//display: none;
 
 	background: #ffffff;
 	box-shadow: 2px 2px 0px rgba(0, 0, 0, .05);
