--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-size-tabs {
 	text-align: center;
@@ -12,7 +13,8 @@
 }
 
 .b-size-tabs__link {
-	font-size: 24px;
+	.my-heading-h3();
+
 	color: @text-color;
 	display: inline-block;
 	border: 2px dashed rgba(0, 0, 0, .05);
