--- a/src/blocks/b-subscribe/b-subscribe.less
+++ b/src/blocks/b-subscribe/b-subscribe.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-subscribe {
 	text-align: center;
@@ -9,16 +10,26 @@
 
 .b-subscribe__title {
 	font-weight: bold;
-	font-size: 40px;
 	margin-bottom: 10px;
+	line-height: @headings-line-height;
+
+	.my-heading-h1();
 }
 
 .b-subscribe__lead {
-	font-size: 30px;
 	margin-bottom: 40px;
+
+	.my-heading-lead();
 }
 
 .b-subscribe__form {
+	.form-group {
+		@media (max-width: @screen-sm-max) {
+			margin-left: 15px;
+			margin-right: 15px;
+			margin-bottom: 20px;
+		}
+	}
 }
 
 .b-subscribe__input {
@@ -29,8 +40,11 @@
 	font-size: 24px;
 	padding: 13px 12px;
 	height: 52px;
-	width: 461px !important;
 	text-align: center;
+
+	@media (min-width: @screen-md-min) {
+		width: 461px !important;
+	}
 
 	&:focus {
 		background-color: #f3fcfa;
