--- a/src/blocks/b-summary/b-summary.less
+++ b/src/blocks/b-summary/b-summary.less
@@ -3,10 +3,7 @@
 
 .b-summary {
 	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 40px;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin: 28px -10px 38px;
 }
 
 .b-summary__item {
@@ -14,8 +11,17 @@
 
 	.clearfix();
 	display: inline-block;
-	padding: 14px 20px 8px;
-	margin: 0 5px;
+	padding: 4px 8px 10px;
+	margin: 2px 2px;
+
+	@media (min-width: @screen-sm-min) {
+		padding: 8px 12px 16px;
+		margin: 2px 5px;
+	}
+
+	@media (min-width: @screen-md-min) {
+		padding: 9px 14px 12px;
+	}
 
 	color: @text-color;
 
@@ -26,20 +32,37 @@
 }
 
 .b-summary__number {
-	font-size: 50px;
-	height: 55px;
+	font-size: 24px;
+	height: 35px;
 	float: left;
 	margin-right: 6px;
 	position: relative;
-	top: -3px;
+	top: 8px;
+
+	@media (min-width: @screen-sm-min) {
+		font-size: 33px;
+		top: 5px;
+	}
+	@media (min-width: @screen-md-min) {
+		font-size: 44px;
+		height: 52px;
+		//top: -3px;
+	}
 }
 
 .b-summary__text {
-	font-size: 24px;
-	line-height: 20px;
+	font-size: 16px;
+	line-height: 20/24;
 	float: left;
 	text-align: left;
 	margin-top: 6px;
+
+	@media (min-width: @screen-sm-min) {
+		font-size: 18px;
+	}
+	@media (min-width: @screen-md-min) {
+		font-size: 24px;
+	}
 }
 
 .b-summary__item_1 {
