--- a/src/blocks/b-vacancies/b-vacancies.less
+++ b/src/blocks/b-vacancies/b-vacancies.less
@@ -16,7 +16,12 @@
 	background: #ffffff;
 	box-shadow: 2px 2px 0px rgba(0, 0, 0, .05);
 	margin: 28px 0;
-	padding: 7px 50px 50px;
+	padding: 7px 15px 15px;
+
+	@media (min-width: @screen-md-min) {
+		padding: 7px 50px 50px;
+	}
+
 	display: block;
 	text-align: center;
 	color: @text-color;
@@ -33,7 +38,7 @@
 
 .b-vacancies__title {
 	font-weight: bold;
-	font-size: 40px;
+	.my-heading-h1();
 	margin: 17px 0;
 }
 
