--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -24,3 +24,51 @@
 		border-bottom-color: @hover-color;
 	}
 }
+
+.my-heading-h1() {
+	font-size: 30px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 36px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		font-size: 40px;
+	}
+}
+
+.my-heading-lead() {
+	font-size: 20px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 24px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		font-size: 30px;
+	}
+}
+
+.my-heading-h3() {
+	font-size: 18px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 20px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		font-size: 24px;
+	}
+}
+
+.my-heading-h4() {
+	font-size: 16px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 18px;
+	}
+
+	@media (min-width: @grid-float-breakpoint) {
+		font-size: 20px;
+	}
+}
