--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -3,7 +3,11 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            h2.b-page__title Справочник клиента
+            .text-center.hidden-lg.hidden-xl
+                a.b-page__back(href='blog.html') Посмотреть все статьи
+
+            .visible-lg.visible-xl
+                h2.b-page__title Справочник клиента
 
             .b-blog-menu
                 .b-blog-menu__list
@@ -30,15 +34,15 @@ block content
                 h1.b-blog-item__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
 
                 .b-blog-item__lead
-                    .b-blog-item__info 16 марта 2015
-                    .b-blog-item__info 4 комментария
-                    .b-blog-item__info 1242 просмотра
-                    .b-blog-item__share.pull-right
-                        script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
-                        script(src="//yastatic.net/share2/share.js")
-                        .ya-share2(data-services="vkontakte,facebook,gplus")
-                    .pull-right
-                        .b-blog-item__info Категория: #[a.b-blog-item__link(href='#') Реклама]
+                    .b-blog-item__info.b-blog-item__info_date 16 марта 2015
+                    .b-blog-item__info.b-blog-item__info_comments 4 комментария
+                    .b-blog-item__info.b-blog-item__info_views 1242 просмотра
+                    .b-blog-item__info.b-blog-item__info_category #[span.hidden-xs Категория: ]#[a.b-blog-item__link(href='#') Жизнь студии]
+                    .b-blog-item__info.b-blog-item__info_share
+                        .b-blog-item__share
+                            script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
+                            script(src="//yastatic.net/share2/share.js")
+                            .ya-share2(data-services="vkontakte,facebook,gplus")
                 .b-blog-item__text.b-text
                     p Выберите подходящие настройки показов на тематических площадках. Укажите долю бюджета кампании, которую вы готовы тратить на переходы с сайтов-партнеров «Яндекса». Учитывайте особенности вашего бизнеса и тематику объявлений. Например, для продавцов пиццы с доставкой предпочтительнее привлекать транзакционный трафик со страницы выдачи. А продавцам сложных и дорогих продуктов лучше сделать акцент на трафике с тематических сайтов, на которых аудитория ищет информацию в ходе потребительского путешествия.
 
@@ -69,44 +73,45 @@ block content
                     a.b-tags__item(href='#') Реклама
                     a.b-tags__item(href='#') Яндекс
 
-            .b-blog
-                .b-blog__list
-                    a.b-blog__item(href='blog_item.html')
-                        p.b-blog__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
+        .b-blog
+            .b-blog__list
+                a.b-blog__item(href='blog_item.html')
+                    p.b-blog__title Яндекс.Баян: пошаговое руководство по настройке рекламной кампании
 
-                        .b-blog__content
-                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                        .b-blog__text
-                            p Один из самых доступных и популярных каналов входящего трафика, который конвертируется на целевых страницах и превращается в лиды или заявки.
-                        .row.text-muted
-                            .col-xs-6
-                                span 16 марта 2015
-                            .col-xs-6.text-right
-                                span 4 комментария
-                    a.b-blog__item(href='blog_item.html')
-                        p.b-blog__title Почему 9 из 10 слайдеров не работают и как это исправить?
+                    .b-blog__content
+                        img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                    .b-blog__text
+                        p Один из самых доступных и популярных каналов входящего трафика, который конвертируется на целевых страницах и превращается в лиды или заявки.
+                    .row.text-muted
+                        .col-xs-6
+                            span 16 марта 2015
+                        .col-xs-6.text-right
+                            span 4 комментария
+                a.b-blog__item(href='blog_item.html')
+                    p.b-blog__title Почему 9 из 10 слайдеров не работают и как это исправить?
 
-                        .b-blog__content
-                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                        .b-blog__text
-                            p Оригинальный слайдер картинок. Слайдеры картинок удобно использовать в разделах фотогалерей, на сайтах интернет-магазинов для подробного описания.
-                        .row.text-muted
-                            .col-xs-6
-                                span 15 августа 2013
-                            .col-xs-6.text-right
-                                span 1 комментарий
-                    a.b-blog__item(href='blog_item.html')
-                        p.b-blog__title Flash или HTML5: сравнение по 10 критериям
+                    .b-blog__content
+                        img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                    .b-blog__text
+                        p Оригинальный слайдер картинок. Слайдеры картинок удобно использовать в разделах фотогалерей, на сайтах интернет-магазинов для подробного описания.
+                    .row.text-muted
+                        .col-xs-6
+                            span 15 августа 2013
+                        .col-xs-6.text-right
+                            span 1 комментарий
+                a.b-blog__item(href='blog_item.html')
+                    p.b-blog__title Flash или HTML5: сравнение по 10 критериям
 
-                        .b-blog__content
-                            img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
-                        .b-blog__text
-                            p Начнем с того, что Flash технология переживает кризис уже не первый год. Наверное с 2000х годов время от времени поднимаются вопросы о том, какой Flash не актуальный.
-                        .row.text-muted
-                            .col-xs-6
-                                span 16 марта 2015
-                            .col-xs-6.text-right
-                                span 16 марта 2015
+                    .b-blog__content
+                        img.img-responsive.b-blog__image(src='assets/img/tmp/akcii.png')
+                    .b-blog__text
+                        p Начнем с того, что Flash технология переживает кризис уже не первый год. Наверное с 2000х годов время от времени поднимаются вопросы о том, какой Flash не актуальный.
+                    .row.text-muted
+                        .col-xs-6
+                            span 16 марта 2015
+                        .col-xs-6.text-right
+                            span 16 марта 2015
+        .container
             .b-blog-item__comments
                 p Place for comments
 
