--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,48 +1,50 @@
 .b-footer
     .container
-        .row
-            .col-xs-3.text-center
-                a.b-footer__logo(href='index.html')
-
-                .b-social-links
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_vk(href='#')
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_fb(href='#')
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_tw(href='#')
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_instagram(href='#')
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_youtube(href='#')
-                    .b-social-links__item
-                        a.b-social-links__link.b-social-links__link_spark(href='#')
-                .b-footer__copyright.clearfix
-                    .text-center.pull-left © Студия Толкунова Дмитрия,#[br]2010‐2016
-            .col-xs-4.col-xs-offset-1
+        .row.b-footer__row
+            .b-footer__column.b-footer__column_1
+                .row
+                    .col-xs-12.col-md-3.col-lg-12
+                        a.b-footer__logo(href='index.html')
+                    .col-xs-12.col-md-4.col-lg-12
+                        .b-social-links
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_vk(href='#')
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_fb(href='#')
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_tw(href='#')
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_instagram(href='#')
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_youtube(href='#')
+                            .b-social-links__item
+                                a.b-social-links__link.b-social-links__link_spark(href='#')
+                    .col-xs-12.col-md-5.col-lg-12
+                        .b-footer__copyright.clearfix © Студия Толкунова Дмитрия,#[br]2010‐2017
+            .b-footer__column.b-footer__column_2
                 .b-footer-menu
                     p.b-footer-menu__header Студия
 
                     .row
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='portfolio_type_1.html') Портфолио
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='vacancies.html') Вакансии
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='prices.html') Стоимость
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Партнерка
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='reviews.html') Отзывы
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Сервисы
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='clients.html') Клиенты
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') События
-                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='contacts.html') Контакты
-            .col-xs-4
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='portfolio_type_1.html') Портфолио
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='vacancies.html') Вакансии
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='prices.html') Стоимость
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Партнерка
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='reviews.html') Отзывы
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Сервисы
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='clients.html') Клиенты
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') События
+                        .col-xs-6.col-sm-4.col-md-5: .b-footer-menu__item: a.b-footer-menu__link(href='contacts.html') Контакты
+            .b-footer__column.b-footer__column_3
                 .b-footer-menu
                     p.b-footer-menu__header Справочник клиента
 
                     .row
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
-                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
+                        .col-xs-6.col-sm-4.col-md-6: .b-footer-menu__item: a.b-footer-menu__link(href='blog.html') Раздел блога
