--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -4,14 +4,30 @@ p.browserupgrade.
     Please #[a(target="_blank", href="http://browsehappy.com/") upgrade your browser] to improve your experience.
 <!--<![endif]-->
 
-.b-header
+nav.navbar.navbar-default.b-navbar
     .container
-        .clearfix
-            a.b-header__logo(href='index.html')
-            .b-header__menu.b-header-menu
-                .b-header-menu__item: a.b-header-menu__link(href='portfolio_type_1.html') Портфолио
-                .b-header-menu__item: a.b-header-menu__link(href='reviews.html') Отзывы
-                .b-header-menu__item: a.b-header-menu__link(href='prices.html') Стоимость
-                .b-header-menu__item: a.b-header-menu__link(href='blog.html') Справочник клиента
-                .b-header-menu__item: a.b-header-menu__link(href='contacts.html') Контакты
-            a.btn.btn-success.btn-lg.b-header__button(href='order_1.html') Заказать баннер
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+            button.navbar-toggle.collapsed(type='button', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            a.navbar-brand(href='index.html'): .b-header__logo
+        // Collect the nav links, forms, and other content for toggling
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='index.html'): .b-header__logo
+                ul.nav.navbar-nav
+                    li: a(href='portfolio_type_1.html') Портфолио
+                    li: a(href='reviews.html') Отзывы
+                    li: a(href='prices.html') Стоимость
+                    li: a(href='blog.html') Справочник клиента
+                    li: a(href='contacts.html') Контакты
+                a.btn.btn-success.btn-lg.navbar-btn.navbar-right(href='order_1.html') Заказать баннер
