--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -9,6 +9,7 @@ block content
                 ul.b-language-tabs__list(role="tablist")
                     li.b-language-tabs__item.active(role="presentation"): a.b-language-tabs__link(href='#banner_language_ru', aria-controls="banner_language_ru", role="tab", data-toggle="tab"): span.b-language-tabs__title Русский
                     li.b-language-tabs__item(role="presentation"): a.b-language-tabs__link(href='#banner_language_en', aria-controls="banner_language_en", role="tab", data-toggle="tab"): span.b-language-tabs__title Английский
+                    li.b-language-tabs__item(role="presentation"): a.b-language-tabs__link(href='#banner_language_fr', aria-controls="banner_language_fr", role="tab", data-toggle="tab"): span.b-language-tabs__title Французский
 
             .b-portfolio-item
                 .tab-content
@@ -51,14 +52,15 @@ block content
                                 .b-portfolio-item__view
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/160x600', alt='')
                 .b-portfolio-item__lead
-                    .b-portfolio-item__info Сфера бизнеса: #[a.b-portfolio-item__link(href='#') Интернет-магазины]
-                    .b-portfolio-item__info Стиль баннера: #[a.b-portfolio-item__link(href='#') Фото-реалистичный]
+                    .b-portfolio-item__info.b-portfolio-item__info_category Сфера бизнеса: #[a.b-portfolio-item__link(href='#') Интернет-магазины]
+                    .b-portfolio-item__info.b-portfolio-item__info_style Стиль баннера: #[a.b-portfolio-item__link(href='#') Фото-реалистичный]
+                    .b-portfolio-item__info.b-portfolio-item__info_date 2 марта 2016
 
-                    .b-portfolio-item__share.pull-right
-                        script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
-                        script(src="//yastatic.net/share2/share.js")
-                        .ya-share2(data-services="vkontakte,facebook,gplus")
-                    .b-portfolio-item__date 2 марта 2016
+                    .b-portfolio-item__info.b-portfolio-item__info_share
+                        .b-portfolio-item__share
+                            script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
+                            script(src="//yastatic.net/share2/share.js")
+                            .ya-share2(data-services="vkontakte,facebook,gplus")
                 .b-portfolio-item__text.b-text
                     p Интерактивный флеш-баннер 240x400 для компании WikiPlanet, которая занимается организацией туров по всей России. Кстати, актуально при нынешнем курсе доллара.
                     p Особенности:
@@ -70,40 +72,40 @@ block content
                 .text-center
                     a.btn.btn-success.btn-lg.b-portfolio-item__button(href='#') Заказать похожий баннер
 
-                .b-portfolio
-                    h5.b-portfolio__header Другие баннеры на тему «Финансы»:
+        .b-portfolio.g-mb80
+            h5.b-portfolio__header Другие баннеры на тему «Финансы»:
 
-                    .b-portfolio__list
-                        a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
-                            img.b-portfolio__image(src='assets/img/tmp/portfolio1.png')
-                            .b-portfolio__content
-                                p.b-portfolio__title Самоедлинноеназваниефирмы
-                                p.b-portfolio__category Строительство
-                            span.b-portfolio__type.b-portfolio__type_html5 HTML5
-                            p.b-portfolio__date 10.02.2010
-                        a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
-                            img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
-                            .b-portfolio__content
-                                p.b-portfolio__title Длинное название фирмы
-                                p.b-portfolio__category Строительство
-                            span.b-portfolio__type.b-portfolio__type_gif GIF
-                            p.b-portfolio__date 10.02.2010
-                        a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
-                            img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
-                            .b-portfolio__content
-                                p.b-portfolio__title QIVI
-                                p.b-portfolio__category Динное название категории
-                            span.b-portfolio__type.b-portfolio__type_jpg JPG
-                            span.b-portfolio__like
-                            p.b-portfolio__date 10.02.2010
-                        a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
-                            img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
-                            .b-portfolio__content
-                                p.b-portfolio__title QIVI
-                                p.b-portfolio__category Строительство
-                            span.b-portfolio__type.b-portfolio__type_html5 HTML5
-                            p.b-portfolio__date 10.02.2010
-                    script.
-                        $('.b-portfolio__item').each(function(){
-                            $(this).data('hold', Math.floor(Math.random() * 400) + 50);
-                        });
+            .b-portfolio__list
+                a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                    img.b-portfolio__image(src='assets/img/tmp/portfolio1.png')
+                    .b-portfolio__content
+                        p.b-portfolio__title Самоедлинноеназваниефирмы
+                        p.b-portfolio__category Строительство
+                    span.b-portfolio__type.b-portfolio__type_html5 HTML5
+                    p.b-portfolio__date 10.02.2010
+                a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                    img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
+                    .b-portfolio__content
+                        p.b-portfolio__title Длинное название фирмы
+                        p.b-portfolio__category Строительство
+                    span.b-portfolio__type.b-portfolio__type_gif GIF
+                    p.b-portfolio__date 10.02.2010
+                a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                    img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
+                    .b-portfolio__content
+                        p.b-portfolio__title QIVI
+                        p.b-portfolio__category Динное название категории
+                    span.b-portfolio__type.b-portfolio__type_jpg JPG
+                    span.b-portfolio__like
+                    p.b-portfolio__date 10.02.2010
+                a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
+                    img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
+                    .b-portfolio__content
+                        p.b-portfolio__title QIVI
+                        p.b-portfolio__category Строительство
+                    span.b-portfolio__type.b-portfolio__type_html5 HTML5
+                    p.b-portfolio__date 10.02.2010
+            script.
+                $('.b-portfolio__item').each(function(){
+                    $(this).data('hold', Math.floor(Math.random() * 400) + 50);
+                });
