--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -44,7 +44,7 @@ block content
                     .text-center: a.b-reviews__title(href='#') Газелькин
                     .b-reviews__content.b-reviews__content_type_image
                         .b-review.b-review_image
-                            a.b-review__link(href='#review_1'): img.img-responsive(src='http://placehold.it/196x264')
+                            a.b-review__link(href='#review_1', data-url="http://placehold.it/196x264"): img.img-responsive(src='http://placehold.it/196x264')
                     .b-reviews__footer
                         span.b-reviews__date 5 февраля 2015
                         a.b-reviews__link(href='#') Оригинал отзыва
